--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "symfony/mime": "6.0.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/notifier": "6.0.*",
+        "symfony/polyfill-mbstring": "~1.23.1",
         "symfony/process": "6.0.*",
         "symfony/property-access": "6.0.*",
         "symfony/property-info": "6.0.*",
