--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     },
     "engines": {
         "node": "v16.14.*",
-        "npm" : "8.5.*"
+        "npm": "8.5.*"
+    },
+    "dependencies": {
+        "nouislider": "^15.5.1"
     }
 }
